[package]
name = "hello-world-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
tokio = { version = "1.22.0", features = ["rt-multi-thread"] }
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.0"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]]
    name = "client"
    path = "src/client.rs"
